Image editor only displays the first frame during 'Viewport render animation' #80915

Closed
opened 2020-09-18 05:35:22 +02:00 by Meino Cramer · 6 comments

System Information
Operating system: Linux (GENTOO Linux)
Graphics card: NVIDIA Corporation TU106 [GeForce RTX 2060 SUPER] (rev a1)

Blender Version
Broken: Blender 2.91.0 alpha (since some nightly builds, current 2020-09-17 cacd57b67a)
Worked: Blender 2.91.0 alpha (last working nightly build, 2020-09-10 66078594d1, broken since then)

Short description of error
The viewport is not updated while rendering a viewport animation. "View through camera" and "window view" are affected.
Saved animation file is ok.

Exact steps for others to reproduce the error

  • Start blender
  • Make any animation in the Cube (for example animate the cube to move on the x axis between frames 0 and 250)
  • Go into Eevee mode
  • Activate "Viewport Render animation" either with key shortcut or menu
    Watch viewport
    Watch saved file after animation has ended

Blender 2.90 and Blender 2.83.6 are not affected

**System Information** Operating system: Linux (GENTOO Linux) Graphics card: NVIDIA Corporation TU106 [GeForce RTX 2060 SUPER] (rev a1) **Blender Version** Broken: Blender 2.91.0 alpha (since some nightly builds, current 2020-09-17 cacd57b67a15) Worked: Blender 2.91.0 alpha (last working nightly build, 2020-09-10 66078594d130, broken since then) **Short description of error** The viewport is not updated while rendering a viewport animation. "View through camera" and "window view" are affected. Saved animation file is ok. **Exact steps for others to reproduce the error** - Start blender - Make any animation in the Cube (for example animate the cube to move on the x axis between frames 0 and 250) - Go into Eevee mode - Activate "Viewport Render animation" either with key shortcut or menu Watch viewport Watch saved file after animation has ended Blender 2.90 and Blender 2.83.6 are not affected
Author

Added subscriber: @mcq

Added subscriber: @mcq
Germano Cavalcante changed title from Viewport render animation does not updated in viewport to Image editor only displays the first frame during 'Viewport render animation' 2020-09-21 19:08:31 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Jeroen Bakker self-assigned this 2020-09-22 06:54:33 +02:00

This issue was referenced by ee89106ac1

This issue was referenced by ee89106ac12eb77e1d4722b4923247086a3b6c69
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

Fix confirmed with blender-2.91.0-8d1123ba220b-linux64.tar.xz. It works again. Thanks a lot! :)

Fix confirmed with blender-2.91.0-8d1123ba220b-linux64.tar.xz. It works again. Thanks a lot! :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80915
No description provided.