Fix T80915: Image editor only displays the first frame during 'Viewport render animation'

During viewport render animation the gpu textures weren't tagged as
invalid. As the image uv editor now draws the gpu texture only the first
was shown as it wasn't refreshed with the actual image data.